[gd_scene load_steps=5 format=3 uid="uid://3ecl8p6jym3v"]

[ext_resource type="Script" path="res://app/main-menu/configure-generate/configure_generate.gd" id="1_awdic"]
[ext_resource type="PackedScene" uid="uid://desy7wwqh5j8x" path="res://ui/game-ui/game-header.tscn" id="1_s6l6v"]
[ext_resource type="PackedScene" uid="uid://d1q1oo6dpavt8" path="res://ui/game-ui/game-panel.tscn" id="3_xom7u"]
[ext_resource type="PackedScene" uid="uid://l4g7jgfosw2v" path="res://ui/game-ui/game-button.tscn" id="4_anarx"]

[node name="MainMenuConfigureGenerate" type="VBoxContainer"]
custom_minimum_size = Vector2(540, 0)
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -161.0
offset_top = 10.0
offset_right = 161.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
script = ExtResource("1_awdic")

[node name="GameHeader" parent="." instance=ExtResource("1_s6l6v")]
layout_mode = 2
label = "Generate A Mission"

[node name="Options" parent="." instance=ExtResource("3_xom7u")]
layout_mode = 2
size_flags_vertical = 2

[node name="Margin" type="MarginContainer" parent="Options"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Layout" type="VBoxContainer" parent="Options/Margin"]
layout_mode = 2

[node name="SizeLabel" type="Label" parent="Options/Margin/Layout"]
layout_mode = 2
text = "Map Size
"

[node name="Size" type="HBoxContainer" parent="Options/Margin/Layout"]
layout_mode = 2

[node name="Small" parent="Options/Margin/Layout/Size" instance=ExtResource("4_anarx")]
custom_minimum_size = Vector2(67, 36)
layout_mode = 2
toggle_mode = true
action_mode = 0
label = "Small"
font_size = 12

[node name="Medium" parent="Options/Margin/Layout/Size" instance=ExtResource("4_anarx")]
custom_minimum_size = Vector2(85, 36)
layout_mode = 2
toggle_mode = true
action_mode = 0
label = "Medium"
font_size = 12

[node name="Large" parent="Options/Margin/Layout/Size" instance=ExtResource("4_anarx")]
custom_minimum_size = Vector2(74, 36)
layout_mode = 2
toggle_mode = true
action_mode = 0
label = "Large"
font_size = 12

[node name="ChallengeLabel" type="Label" parent="Options/Margin/Layout"]
layout_mode = 2
text = "Challenge"

[node name="Challenge" type="HBoxContainer" parent="Options/Margin/Layout"]
layout_mode = 2

[node name="Forgiving" parent="Options/Margin/Layout/Challenge" instance=ExtResource("4_anarx")]
custom_minimum_size = Vector2(109, 36)
layout_mode = 2
toggle_mode = true
action_mode = 0
label = "Forgiving"
font_size = 12

[node name="Punishing" parent="Options/Margin/Layout/Challenge" instance=ExtResource("4_anarx")]
custom_minimum_size = Vector2(109, 36)
layout_mode = 2
toggle_mode = true
action_mode = 0
label = "Punishing"
font_size = 12

[node name="Deadly" parent="Options/Margin/Layout/Challenge" instance=ExtResource("4_anarx")]
custom_minimum_size = Vector2(80, 36)
layout_mode = 2
toggle_mode = true
action_mode = 0
label = "Deadly"
font_size = 12

[node name="Controls" parent="." instance=ExtResource("3_xom7u")]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Controls"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Layout" type="HBoxContainer" parent="Controls/Margin"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Return" parent="Controls/Margin/Layout" instance=ExtResource("4_anarx")]
custom_minimum_size = Vector2(108, 50)
layout_mode = 2
label = "Return"

[node name="Continue" parent="Controls/Margin/Layout" instance=ExtResource("4_anarx")]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
label = "Continue"

[connection signal="button_down" from="Options/Margin/Layout/Size/Small" to="." method="_select_small_map_size"]
[connection signal="button_down" from="Options/Margin/Layout/Size/Medium" to="." method="_select_medium_map_size"]
[connection signal="button_down" from="Options/Margin/Layout/Size/Large" to="." method="_select_large_map_size"]
[connection signal="button_down" from="Options/Margin/Layout/Challenge/Forgiving" to="." method="_select_forgiving_challenge"]
[connection signal="button_down" from="Options/Margin/Layout/Challenge/Punishing" to="." method="_select_punishing_challenge"]
[connection signal="button_down" from="Options/Margin/Layout/Challenge/Deadly" to="." method="_select_deadly_challenge"]
[connection signal="button_up" from="Controls/Margin/Layout/Return" to="." method="_return_from"]
[connection signal="button_up" from="Controls/Margin/Layout/Continue" to="." method="_continue_to"]
